# lab6

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CPack.yml  ci.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build/_CPack_Packages/Darwin/STGZ/: lab06-0.1.1-Darwin.sh
_build/formatter_ex/: Makefile  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake  hello_world
_build/solver_application/: Makefile  cmake_install.cmake  solver
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
hello_world_application/_build/formatter/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/: CMakeLists.tx  CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
solver_application/_build/formatter/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
